--- a/components/go-zpzdyshz/overlays/development/deployment-patch.yaml
+++ b/components/go-zpzdyshz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-zpzdyshz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-zpzdyshz:bd3470fd4d643c34582e9481b7313da77f4646e1@sha256:d6dba38dbf7cb2c2b1574d41adec992dc2b1a66c7ebcda8ddd10c8585db7a23a
+          name: container-image
